--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p class="dates"> Jul 2025 - in progress </p>
     </section> 
      
-  <<section>
+  <section>
   <header class="section-title">Skills</header>
 
   <div class="skill">
